--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "sokodao",
   "version": "1.0.0",
@@ -17,6 +16,8 @@
     "hardhat": "^3.0.12",
     "typescript": "~5.8.0",
     "viem": "^2.38.6"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.3"
   }
 }
-
